--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.1.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.5.2",
