--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-CLIENT
-JWT_SECRET
-JWT_EXPIRES
-MONGODB_URI
+CLIENT=
+JWT_SECRET=
+JWT_EXPIRES=
+MONGODB_URI=
+MOMO_API=
+MOMO_ACCESS_KEY =
+MOMO_SECRET_KEY =
+MOMO_REDIRECT_URL =
